crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__remove_xml_proc_inst__remove_xml_proc_inst-2.snap
---
source: crates/oxvg_optimiser/src/jobs/remove_xml_proc_inst.rs
expression: "test_config(r#\"{ \"removeXmlProcInst\": true }\"#,\nSome(r#\"<?xml-stylesheet href=\"style.css\" type=\"text/css\"?>\n<svg xmlns=\"http://www.w3.org/2000/svg\">\n    test\n</svg>\"#),)?"
---
<?xml-stylesheet href="style.css" type="text/css"?>
<svg xmlns="http://www.w3.org/2000/svg">
    test
</svg>
